# Crypto-triangle-scanner-

./: Cargo.toml  README.md  cargo.toml  index.html  main.rs
src/: Models.rs  binance.rs  config.rs  main.rs  models.rs  routes.rs  scanner.rs  utils.rs
src/exchange/: bybit.rs  gateio.rs  kraken.rs  kucoin.rs
src/exchanges/: binance.rs  bybit.rs  gateio.rs  kraken.rs  kucoin.rs  mod.rs
src/routes/: Binance.rs  bybit.rs  gateio.rs  kraken.rs  kucoin.rs
static/: app.js  index.html  script.js  style.css
