[package]
name = "triangular_arb_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing-subscriber = "0.3"
itertools = "0.12"
