[package]
name = "crypto-triangle-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
